# MathModelC

./: .gitignore  CMakeLists.txt  Configuration.c  Configuration.h  ConwayCell.c  ConwayCell.h  Doxyfile  Humans.c  Humans.h  MapRenderer.c  MapRenderer.h  ModelApp.c  ModelApp.h  TODO  Zombies.c  Zombies.h  main.c
InputHandler/: CMakeLists.txt  InputHandler.c  InputHandler.h
MapRenderer/: CMakeLists.txt  MapRenderer.c  MapRenderer.h  MapRenderer.project
MapRenderer/Renderer/: Atlas.c  CMakeLists.txt  Renderer.c  Renderer.h  Renderer.project
Model/: Agent.c  Agent.h  CMakeLists.txt  Grapher.c  Grapher.h  Model.c  Model.h  Random.c  Random.h  World.c  World.h
ModelApps/ConwaysGameOfLife/: Configuration.c  ModelApp.c
ModelApps/ZombiesVsHumans/: Configuration.c  Configuration.h  Zombies.c
Renderer/: Atlas.c  Atlas.h  CMakeLists.txt  Renderer.c  Renderer.h
Types/: CMakeLists.txt  DynamicArray.h  DynamicQueue.c  DynamicQueue.h
res/: tile.xcf
